--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -32,6 +32,7 @@ dd {
 
 /* Выставляем основные настройки по-умолчанию для body */
 body {
+  
   /* min-height: 100vh; */
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
@@ -83,16 +84,17 @@ select {
 }
 
 .wrapper {
-  display: flex;
   height: 100vh;
   flex-wrap: wrap;
   min-width: 100%;
   justify-content: center;
   /* align-content: space-around; */
   min-height: 100%;
-  background-image: url(https://i.ibb.co/ZRDrdvs/natural-4821583.png);
-  background-repeat: no-repeat;
+  background: url(https://i.ibb.co/ZRDrdvs/natural-4821583.png) no-repeat;
+  background-attachment: local;
+  /* background-position: center center ; */
   background-size: cover;
+  
 }
 
 search-city {
