--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -155,6 +155,16 @@ search-city {
   font-size: 16px;
 }
 
+.current-weather-details-link {
+  color:rgba(255, 255, 255, 0.5);
+  text-align: right;
+  font-size: 14px;
+  cursor: pointer;
+  margin-top: 20px;
+  padding-left: 100px;
+  text-decoration: none;
+}
+
 /* Прогноз погоды */
 
 .forecast-weather {
@@ -296,3 +306,17 @@ search-city {
   }
 }
 
+.error-message {
+  display: block;
+  color: #fff;
+  font-weight: 700;
+  font-size: 26px;
+  padding: 0 auto;
+}
+
+@media(max-width: 769px) {
+  .error-message {
+    font-weight: 700;
+    font-size: 18px;
+  }
+}
