--- a/weather-app/src/index.css
+++ b/weather-app/src/index.css
@@ -84,7 +84,7 @@ select {
   }
 }
 
-.wrapper {
+.wrapper_cold{
   height: 100vh;
   /* display: flex; */
   flex-wrap: wrap;
@@ -92,13 +92,30 @@ select {
   min-width: 100%;
   justify-content: space-between;
   align-content: space-around;
-  
   min-height: 100%;
   background: url(https://i.ibb.co/ZRDrdvs/natural-4821583.png) no-repeat;
+  transition: background 0.5s ease;
   background-attachment: local;
   /* background-position: center center ; */
   background-size: cover;
   
+}
+
+.wrapper_warm {
+  height: 100vh;
+  /* display: flex; */
+  flex-wrap: wrap;
+  flex-direction: column;
+  min-width: 100%;
+  justify-content: space-between;
+  align-content: space-around;
+  min-height: 100%;
+  background: url(https://i.ibb.co/jbybBrm/wallpaperbetter.jpg) no-repeat;
+  transition: background 0.5s ease;
+  background-attachment: local;
+  /* background-position: center center ; */
+  background-size: cover;
+    
 }
 
 /* @media(max-width: 730px) {
@@ -140,7 +157,7 @@ search-city {
 }
 
 .current-weather {
-  color: white;
+  color: rgb(255, 255, 255);
   display: flex;
   max-width: 225px;
   margin: 50px auto 37px;
@@ -159,12 +176,12 @@ search-city {
 
 .current-weather h4 {
   font-weight: 700;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 .current-weather h5 {
   font-weight: 700;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .current-weather-details-link {
@@ -216,9 +233,7 @@ search-city {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  /* overflow: auto; */
   white-space: nowrap;
-  /* min-width: 1000px; */
 }
 
 .forecast-day-weather {
@@ -281,88 +296,6 @@ search-city {
   }
 }
 
-
-/* аккордион с прогнозом погоды */
-/* 
-.container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  max-width: calc(100vw - 40px);
-  padding: 20px;
-}
-
-.accordion {
-  width: 100%;
-}
-
-.accordion-forecast-weather {
-  background: #fff;
-  border-radius: 3px;
-  box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
-  margin: 15px 0;
-}
-
-.accordion-forecast-weather__title {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: rgba(5, 5, 28, 0.55);
-  color: #fff;
-  border-radius: 10px;
-  text-transform: uppercase;
-  font-weight: 400;
-  padding: 15px 20px;
-  cursor: pointer;
-  margin: 0;
-  transition: 0.2s ease;
-  font-size: 14px;
-}
-
-@media (min-width: 730px) {
-  .accordion-forecast-weather__title {
-    font-size: 18px;
-  }
-  .search-bar {
-    margin-bottom: 5%;
-  }
-}
-
-.accordion-forecast-weather__title:hover {
-  background: #2d6cf9;
-  transition: 0.2s ease;
-}
-
-.accordion-forecast-weather__content {
-  color: rgba(0, 0, 0, 0.65);
-  line-height: 1.7em;
-  max-height: 0;
-  overflow: hidden;
-  transition: 0.5s ease;
-  font-size: 14px;
-
-}
-
-@media (min-width: 730px) {
-  .accordion-forecast-weather__content {
-    font-size: 16px;
-  }
-}
-
-.accordion-forecast-weather__content.is-open {
-  max-height: 1200px;
-  transition: 0.5s ease;
-}
-
-.accordion-forecast-weather__content-inside {
-  /* min-width: 1000px; */
-  /* padding: 15px 20px;
-}
-
-.rotated {
-  transform: rotate(90deg);
-}  */
-
 .search-logo {
   display: flex;
   flex-direction: column;
@@ -395,12 +328,6 @@ search-city {
   
 }
 
-/* @media(max-height: 740px) {
-  .search-bar {
-    margin-bottom: 13%;
-  }
-} */
-
 @media(min-width: 1240px) {
   .search-bar {
     margin-bottom: 0px;
@@ -418,6 +345,7 @@ search-city {
   font-weight: 700;
   font-size: 26px;
   padding: 0 auto;
+  margin-top: 200px;
 }
 
 @media(max-width: 769px) {
@@ -429,13 +357,24 @@ search-city {
 
 
 /* детальная информация о погоде */
-.wrapper-detail-information {
+.wrapper_cold_detail_information {
 
   min-width: 100%;
   min-height: 100%;
   background: url(https://i.ibb.co/ZRDrdvs/natural-4821583.png) no-repeat;
   background-attachment: local;
-  /* background-position: center center ; */
+  
+  background-size: cover;
+  color: #fff;
+  
+}
+.wrapper_warm_detail_information {
+
+  min-width: 100%;
+  min-height: 100%;
+  background: url(https://i.ibb.co/jbybBrm/wallpaperbetter.jpg) no-repeat;
+  background-attachment: local;
+  transition: background 0.5s ease;
   background-size: cover;
   color: #fff;
   
@@ -469,7 +408,7 @@ search-city {
 }
 
 .detail-temperature .temperature {
-  color: #ffff;
+  color: rgb(255, 255, 255);
   font-size: 60px;
   line-height: 1.1em;
 }
@@ -480,7 +419,7 @@ search-city {
 }
 
 .link-to-home-title {
-  color: white;
+  color: rgb(255, 255, 255);
   text-decoration: none;
 }
 
